[package]
name = "ospath"
version = "0.1.0"
edition = "2021"
authors = ["Moryan<moyan@moyanjdc.top>"]
description = "A simple command line tool to get the path of the current OS."

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
